Cambios de Pagina Data

--- a/public/locales/en/data.json
+++ b/public/locales/en/data.json
@@ -3,10 +3,14 @@
   "PrimerChat1": "In 2023, the",
   "PrimerChat2": "Peruvian National Police (PNP)",
   "PrimerChat3": "registered an average of",
-  "PrimerChat4": "107 attempts of cyberattacks per minute",
+  "PrimerChat4": "107 attempts ",
+  "PrimerChat5":"of cyberattacks",
+  "PrimerChat6":" per minute",
 
-  "SegundoChat1": "Just a",
-  "SegundoChat2": "quarter of the latin american users ",
+  "SegundoChat1": "Just a ",
+  "SegundoChat2": "of the latin american ",
+  "SegundoChat2.1": "quarter ",
+  "SegundoChat2.2": "users ",
   "SegundoChat3": "have",
   "SegundoChat4": "security software installed",
   "SegundoChat5": "on their electronic devices",
@@ -17,8 +21,12 @@
   "CuartoChat1": "It is estimated that by 2025 the cost of damage from this crime will be",
   "CuartoChat2": "US$10 billion",
 
-  "QuintoChat1": "This makes cybercrime into",
-  "QuintoChat2": "the third biggest economy of the world",
+  "QuintoChat1": "This makes cybercrime into the ",
+  "QuintoChat2": "third biggest economy",
+  "QuintoChat2.1": " of the ",
+  "QuintoChat2.2": "world",
+  "QuintoChat2.3": "",
+  "QuintoChat2.4": "",
   "QuintoChat3": "behind only",
   "QuintoChat4": "the United States",
   "QuintoChat5": "China",
