feat: updated splash screen

--- a/public/locales/en/general.json
+++ b/public/locales/en/general.json
@@ -4,5 +4,7 @@
   "title": "Stay alert to",
   "title-2": "online dangers",
   "start": "Start",
-  "link-verifier": "Links and files checker"
+  "link-verifier": "Links and files checker",
+  "splash-desktop-url": "https://okalphavideo.s3.us-east-2.amazonaws.com/makereign/idents/website/thumbnail-002.mp4",
+  "splash-mobile-url": "https://okalphavideo.s3.us-east-2.amazonaws.com/makereign/idents/website/thumbnail-002.mp4"
 }
