Videos multilenguage y correccion de textos de Prevencion

--- a/public/locales/en/ciberalerta.json
+++ b/public/locales/en/ciberalerta.json
@@ -15,5 +15,6 @@
   "SegundoChat4": "the electronic commerce",
   "SegundoChat5": "growth",
   "SegundoChat6": "which has been enhanced since",
-  "SegundoChat7": " the pandemic"
+  "SegundoChat7": " the pandemic",
+  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser-en_shorted.webm"
 }
