--- a/public/locales/es/ciberalerta.json
+++ b/public/locales/es/ciberalerta.json
@@ -15,6 +15,6 @@
   "SegundoChat4": "comercio electrónico",
   "SegundoChat5": "",
   "SegundoChat6": "que se potenció a",
-  "SegundoChat7": "raíz de la pandemia"
-
+  "SegundoChat7": "raíz de la pandemia",
+  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser_v2.webm"
 }
