--- a/public/locales/es/prevencion.json
+++ b/public/locales/es/prevencion.json
@@ -1,26 +1,23 @@
 {
     "titulo1": "¿Cómo prevenir estos ciberdelitos?",
-
     "primer1": "Según un estudio de ",
-    "primer2": "Kaspersky 📊, aunque el 69% de los peruanos ",
-    "primer3": "se preocupa por revisar la ",
-    "primer4": "legitimidad de los sitios web ",
-    "primer5": "🌐 antes de ingresar sus ",
-    "primer6": "datos personales, el ",
-    "primer7": "🔐, el ",
-    "primer8": " 77% reconoce que no sabe cómo identificar una página falsa.",
-
+    "primer2": "Kaspersky 📊",
+    "primer3": ", aunque el  ",
+    "primer4": "69% de los peruanos ",
+    "primer5": "se preocupa por revisar la legitimidad de los ",
+    "primer6": "sitios web ",
+    "primer7": "antes de ingresar sus ",
+    "primer8": "datos personales",
+    "primer9": ", el ",
+    "primer10": " 77% reconoce que no sabe cómo identificar una página falsa.",
     "titulo2": "Canales y vías de denuncia",
-
-    "segundo1": "En esta sección podrás encontrar los ",
-    "segundo2": "principales medios para denunciar ciberdelitos",
-    "segundo3": " en el Perú. En caso hayas sido",
-    "segundo4": " víctima de un ciberdelito, ",
-    "segundo5": " 🖥️🔒 o busques ",
-    "segundo6": " reportar una actividad sospechosa",
-    "segundo7": " ⚠️, puedes ponerte en ",
-    "segundo8": " contacto con las siguientes entidades responsables:",
-
+    "segundo1": "En esta sección podrás encontrar los principales medios para ",
+    "segundo2": "denunciar ciberdelitos",
+    "segundo3": " en el Perú. En caso hayas sido ",
+    "segundo4": "víctima de un ciberdelito",
+    "segundo5": ", o busques ",
+    "segundo6": "reportar ",
+    "segundo7": "una actividad sospechosa, puedes ponerte en  contacto con las siguientes entidades responsables:",
     "tercero": "División de Investigación de Delitos de Alta Tecnología (DIVINDAT)",
     "cuarto": "Esta es la unidad especializada de la Policía Nacional del Perú (PNP) que atiende delitos informáticos.",
     "quinto1": "☎️ Teléfonos: (01) 431-8898 o línea gratuita 1818",
@@ -33,5 +30,7 @@
     "septimo4": "🌐✅Es necesario ",
     "septimo5": "identificarte con tu DNI 🆔 y proporcionar pruebas claras 📂.",
     "octavo1": "Enlace:",
-    "octavo2": "Denuncias en línea"
+    "octavo2": "Denuncias en línea",
+    
+    "video_yanira": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/recomendaciones_yanira.webm"
 }
