fix: fixed merges

--- a/public/locales/en/ciberalerta.json
+++ b/public/locales/en/ciberalerta.json
@@ -15,12 +15,7 @@
   "SegundoChat3": " expansion and the ",
   "SegundoChat4": "electronic commerce",
   "SegundoChat5": "growth",
-<<<<<<< HEAD
-  "SegundoChat6": "which has been enhanced since",
-  "SegundoChat7": " the pandemic",
-  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser-en_shorted.webm"
-=======
   "SegundoChat6": "which has been enhanced since the",
-  "SegundoChat7": " pandemic"
->>>>>>> e44e34d4b9ce89cd131dbb5961160d0a3fca5ac9
+  "SegundoChat7": " pandemic",
+  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser-en_shorted.webm"
 }
