--- a/public/locales/en/elphishing.json
+++ b/public/locales/en/elphishing.json
@@ -1,25 +1,26 @@
 {
+  "graphic": "https://public.flourish.studio/visualisation/20894811/embed",
   "title": "One of the fastest growing cybercrime",
   "msg1-1": "Phishing is a type of ",
   "msg1-2": "cyberattack ",
-  "msg1-3": "which ",
-  "msg1-4": "use electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1 , phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
+  "msg1-3": "which use ",
+  "msg1-4": "electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1 , phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
   "msg1-5": "to trick people and persuade them to perform certain action such as:",
 
   "msg2-1": "Share ",
-  "msg2-2": "confidential data\uD83D\uDD11",
+  "msg2-2": "confidential data",
   "msg2-3": "Download ",
   "msg2-4": "malware ",
-  "msg2-5": "(any type of harmful codes or applications that can affect a device)\uD83D\uDCBB\uFE0F",
+  "msg2-5": "(any type of harmful codes or applications that can affect a device)",
   "msg2-6": "Exposing their ",
   "msg2-7": "personal information ",
-  "msg2-8": "to cybercrime \uD83D\uDEE1\uFE0F\uD83D\uDEA8",
+  "msg2-8": "to cybercrime ",
 
   "msg3-1": "Between July 2023 and July 2024, more than ",
   "msg3-2": "697 million phishing blocks \uD83D\uDEE1\uFE0F\uD83D\uDCE7",
-  "msg3-3": "were registered throughout Latin America, according to the Kaspersky Threat Panorama \uD83C\uDF10, a cybersecurity company  \uD83D\uDD12 dedicated to ",
+  "msg3-3": "were registered throughout Latin America, according to the Kaspersky Threat Panorama, a cybersecurity company dedicated to ",
   "msg3-4": "offering solutions and protection services for users and companies ",
-  "msg3-5": "around the world \uD83C\uDF0D\uD83D\uDC69\u200D\uD83D\uDCBB.",
+  "msg3-5": "around the world.",
 
   "msg4-1": "In that same period, nearly ",
   "msg4-2": "91 million phishing attacks ",
@@ -32,7 +33,7 @@
   "msg5-3": "countries that showed ",
   "msg5-4": "further growth ",
   "msg5-5": "in ",
-  "msg5-6": "phishing \uD83C\uDFA3 ",
+  "msg5-6": "phishing ",
   "msg5-7": "activity in 2024 were:",
 
   "msg6-1": "Growth of phishing activity in Latin America in 2024",
@@ -52,7 +53,7 @@
 
   "Vishing": "Vishing",
   "msg7-1": "Derived from the words ",
-  "msg7-2": "\"voice\" \uD83C\uDF99\uFE0F and \"phishing\" \uD83C\uDFA3",
+  "msg7-2": "\"voice\" and \"phishing\"",
   "msg7-3": ", this method combines a ",
   "msg7-4": "phone call \uD83D\uDCDE ",
   "msg7-5": "with ",
@@ -60,21 +61,21 @@
   "msg7-7": "rom the user through the internet \uD83C\uDF10.",
 
   "msg8-1": "The aim is to ",
-  "msg8-2": "trick the victims \uD83D\uDD75 ",
+  "msg8-2": "trick the victims ",
   "msg8-3": "in order to make them provide ",
-  "msg8-4": "a digital token \uD83D\uDD11 or a verification code \uD83D\uDCF2 ",
+  "msg8-4": "a digital token or a verification code \uD83D\uDCF2 ",
   "msg8-5": "that allows the cybercriminal to access their ",
   "msg8-6": "bank accounts \uD83D\uDCB3 and make transactions \uD83D\uDCB8.",
 
   "Smishing": "Smishing",
   "msg9-1": "Smishing is a type of ",
   "msg9-2": "online fraud ",
-  "msg9-3": "that consists in ",
-  "msg9-4": "sending fake text messages \uD83D\uDCF1✉\uFE0F ",
+  "msg9-3": "that consists in sending ",
+  "msg9-4": "fake text messages ",
   "msg9-5": "to ",
   "msg9-6": "deceive ",
   "msg9-7": "people and get ",
-  "msg9-8": "personal or financial information. \uD83D\uDD11\uD83D\uDCB3\uD83D\uDEA8",
+  "msg9-8": "personal or financial information. ",
 
   "msg10-1": "The ",
   "msg10-2": "cybercriminal ",
@@ -82,7 +83,7 @@
   "msg10-4": "legitimate entity \uD83C\uDFE6\uD83D\uDCDE, ",
   "msg10-5": "such as ",
   "msg10-6": "banks, companies or public institutions, ",
-  "msg10-7": "to obtain their goals. \uD83C\uDFAF\uD83D\uDCB3\uD83D\uDEA8",
+  "msg10-7": "to obtain their goals.",
 
   "msg11-1": "A study carried out in 10 countries by the ",
   "msg11-2": "Mobile Ecosystem Forum, ",
@@ -94,13 +95,13 @@
 
   "msg12-1": "This cybercrime involves the ",
   "msg12-2": "use of malware, ",
-  "msg12-3": "which ",
-  "msg12-4": "automatically redirects the victim to fake websites. \uD83D\uDCBB\uFE0F\uD83C\uDF10",
+  "msg12-3": "which automatically redirects the victim to ",
+  "msg12-4": "fake websites.",
 
   "msg13-1": "People ",
   "msg13-2": "log in with their credentials or personal information. ",
   "msg13-3": "These are then ",
   "msg13-4": "collected ",
-  "msg13-5": "while the users ",
-  "msg13-6": "remain unaware of the fraud. \uD83D\uDD11\uD83D\uDCBB"
+  "msg13-5": "while the users remain unaware of the ",
+  "msg13-6": "fraud. \uD83D\uDD11\uD83D\uDCBB"
 }
