docs: correctiosn implemented

--- a/public/locales/es/elphishing.json
+++ b/public/locales/es/elphishing.json
@@ -1,25 +1,26 @@
 {
+  "graphic": "https://public.flourish.studio/visualisation/20791460/embed",
   "title": "Uno de los delitos de mayor crecimiento",
   "msg1-1": "El phishing es un tipo de ",
   "msg1-2": "ciberataque ",
-  "msg1-3": "que ",
-  "msg1-4": "utiliza correos electrónicos \uD83D\uDCE7, mensajes de texto \uD83D\uDCF1 , llamadas telefonicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
+  "msg1-3": "que utiliza ",
+  "msg1-4": "correos electrónicos \uD83D\uDCE7, mensajes de texto \uD83D\uDCF1 , llamadas telefonicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
   "msg1-5": "para engañar a las personas y persuadirlas a realizar acciones como:",
 
   "msg2-1": "Compartir ",
-  "msg2-2": "datos confidenciales\uD83D\uDD11",
+  "msg2-2": "datos confidenciales",
   "msg2-3": "Descargar ",
   "msg2-4": "malwares ",
-  "msg2-5": "(cualquier tipo de código o aplicacion dañina que puede afectar a un dispositivo)\uD83D\uDCBB\uFE0F",
+  "msg2-5": "(cualquier tipo de código o aplicacion dañina que puede afectar a un dispositivo)",
   "msg2-6": "Exponer su ",
   "msg2-7": "informacion personal ",
-  "msg2-8": "a la ciberdelincuencia \uD83D\uDEE1\uFE0F\uD83D\uDEA8",
+  "msg2-8": "a la ciberdelincuencia ",
 
   "msg3-1": "Entre julio de 2023 y julio de 2024, en toda América Latina, se registraron más de ",
   "msg3-2": "697 millones de bloqueos de phishing \uD83D\uDEE1\uFE0F\uD83D\uDCE7",
-  "msg3-3": "según el Panorama de Amenazas de Kaspersky \uD83C\uDF10, empresa de ciberseguridad \uD83D\uDD12 dedicada a ",
+  "msg3-3": "según el Panorama de Amenazas de Kaspersky , empresa de ciberseguridad  dedicada a ",
   "msg3-4": "ofrecer soluciones y servicios de protección para usuarios y compañías ",
-  "msg3-5": "en todo el mundo \uD83C\uDF0D\uD83D\uDC69\u200D\uD83D\uDCBB.",
+  "msg3-5": "en todo el mundo.",
 
   "msg4-1": "En ese mismo periodo, en el Perú \uD83C\uDDF5\uD83C\uDDEA se registraron cerca de ",
   "msg4-2": "91 millones de ataques de phishing, ",
@@ -30,7 +31,7 @@
   "msg5-1": "Los países que mostraron un ",
   "msg5-2": "mayor crecimiento ",
   "msg5-3": "en la actividad de ",
-  "msg5-4": "phishing \uD83C\uDFA3 ",
+  "msg5-4": "phishing ",
   "msg5-5": "en 2024 en ",
   "msg5-6": "Latinoamérica ",
   "msg5-7": "son:",
@@ -51,7 +52,7 @@
 
   "Vishing": "El Vishing",
   "msg7-1": "Derivado de las palabras ",
-  "msg7-2": "\"voice\" \uD83C\uDF99\uFE0F y \"phishing\" \uD83C\uDFA3",
+  "msg7-2": "\"voice\" y \"phishing\"",
   "msg7-3": ", este método combina una ",
   "msg7-4": "llamada telefónica \uD83D\uDCDE ",
   "msg7-5": "con ",
@@ -59,21 +60,21 @@
   "msg7-7": "del usuario mediante internet \uD83C\uDF10.",
 
   "msg8-1": "El objetivo es ",
-  "msg8-2": "engañarlo \uD83D\uDD75 ",
+  "msg8-2": "engañarlo ",
   "msg8-3": "para que proporcione un ",
-  "msg8-4": "token digital \uD83D\uDD11 o un código de verificación \uD83D\uDCF2 ",
+  "msg8-4": "token digital o un código de verificación \uD83D\uDCF2 ",
   "msg8-5": "que le permita al ciberdelincuente acceder a sus ",
   "msg8-6": "cuentas bancarias \uD83D\uDCB3 y realizar transacciones \uD83D\uDCB8.",
 
   "Smishing": "El Smishing",
   "msg9-1": "El smishing es un tipo de ",
   "msg9-2": "fraude en línea ",
-  "msg9-3": "que consiste en el ",
-  "msg9-4": "envío de mensajes de texto falsos \uD83D\uDCF1✉\uFE0F ",
+  "msg9-3": "que consiste en el envío ",
+  "msg9-4": "de mensajes de texto falsos ",
   "msg9-5": "para ",
   "msg9-6": "engañar ",
   "msg9-7": "a las personas y obtener su ",
-  "msg9-8": "información personal o financiera. \uD83D\uDD11\uD83D\uDCB3\uD83D\uDEA8",
+  "msg9-8": "información personal o financiera.",
 
   "msg10-1": "Los ",
   "msg10-2": "ciberdelincuentes ",
@@ -81,7 +82,7 @@
   "msg10-4": "entidades legítimas \uD83C\uDFE6\uD83D\uDCDE, ",
   "msg10-5": "como ",
   "msg10-6": "bancos, empresas o instituciones públicas, ",
-  "msg10-7": "para conseguir sus objetivos. \uD83C\uDFAF\uD83D\uDCB3\uD83D\uDEA8",
+  "msg10-7": "para conseguir sus objetivos.",
 
   "msg11-1": "Según un estudio realizado en 10 países por el ",
   "msg11-2": "Mobile Ecosystem Forum, ",
@@ -93,13 +94,13 @@
 
   "msg12-1": "Este cibercrimen involucra el ",
   "msg12-2": "uso de malware, ",
-  "msg12-3": "que ",
-  "msg12-4": "redirige automáticamente a la víctima hacia sitios web falsos. \uD83D\uDCBB\uFE0F\uD83C\uDF10",
+  "msg12-3": "que redirige automáticamente a la víctima hacia sitios ",
+  "msg12-4": "web falsos.",
 
-  "msg13-1": "Las personas ",
-  "msg13-2": "introducen allí sus datos de inicio de sesión o información personal, ",
+  "msg13-1": "Las personas introducen allí sus datos de ",
+  "msg13-2": "inicio de sesión o información personal, ",
   "msg13-3": "los cuales son ",
   "msg13-4": "recolectados ",
-  "msg13-5": "sin que puedan percatarse de que se ",
-  "msg13-6": "trata de un fraude. \uD83D\uDD11\uD83D\uDCBB"
+  "msg13-5": "sin que puedan percatarse de que se trata de un ",
+  "msg13-6": "fraude. \uD83D\uDD11\uD83D\uDCBB"
 }
