--- a/public/locales/en/data.json
+++ b/public/locales/en/data.json
@@ -63,5 +63,9 @@
 
   "Grafico3": "Most Reported Cybercrimes in Peru, 2024",
   "Grafico3.1": "Cybercrime Modalities (January to August 2024)",
-  "Grafico3.2": "Source: DIVINDAT"
+  "Grafico3.2": "Source: DIVINDAT",
+
+  "link-grafico-1": "https://public.flourish.studio/visualisation/20894715/embed",
+  "link-grafico-2": "https://public.flourish.studio/visualisation/20894747/embed",
+  "link-grafico-3": "https://public.flourish.studio/visualisation/20894769/embed"
 }
