feat: added components

--- a/public/locales/en/sidebar.json
+++ b/public/locales/en/sidebar.json
@@ -52,5 +52,6 @@
     "subtitle": "Credits",
     "message": "This special was created by...",
     "time": "00:08"
-  }
+  },
+  "disclaimer-title": "Disclaimer"
 }
