--- a/public/locales/es/sidebar.json
+++ b/public/locales/es/sidebar.json
@@ -52,5 +52,6 @@
     "subtitle": "Créditos",
     "message": "Este especial fue hecho por...",
     "time": "00:08"
-  }
+  },
+  "disclaimer-title": "Aviso"
 }
