--- a/public/locales/en/data.json
+++ b/public/locales/en/data.json
@@ -16,10 +16,10 @@
   "SegundoChat5": "on their electronic devices",
 
   "TercerChat1": "According to Cybersecurity Ventures, a leading global organization in cybereconomic research, in 2015 cybercrime had a cost of",
-  "TercerChat2": "US$3 billion",
+  "TercerChat2": "US$3 trillion",
 
   "CuartoChat1": "It is estimated that by 2025 the cost of damage from this crime will be",
-  "CuartoChat2": "US$10 billion",
+  "CuartoChat2": "US$10 trillion",
 
   "QuintoChat1": "This makes cybercrime into the ",
   "QuintoChat2": "third biggest economy",
