fix: fixed components

--- a/public/locales/en/creditos.json
+++ b/public/locales/en/creditos.json
@@ -21,9 +21,10 @@
   "18": "Development",
   "19": "Development",
   "20": "Development",
-  "21": "Supervision, Coordination, and Editing",
+  "21": "Special Collaboration",
   "22": "Supervision, Coordination, and Editing",
-  "23": "Special Thanks",
+  "23": "Supervision, Coordination, and Editing",
   "24": "Special Thanks",
-  "25": "Special Thanks"
+  "25": "Special Thanks",
+  "26": "Special Thanks"
 }
