--- a/public/locales/en/general.json
+++ b/public/locales/en/general.json
@@ -5,6 +5,6 @@
   "title-2": "online dangers",
   "start": "Start",
   "link-verifier": "Links and files checker",
-  "splash-desktop-url": "https://okalphavideo.s3.us-east-2.amazonaws.com/makereign/idents/website/thumbnail-002.mp4",
-  "splash-mobile-url": "https://okalphavideo.s3.us-east-2.amazonaws.com/makereign/idents/website/thumbnail-002.mp4"
+  "splash-desktop-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/intro-horizontal-en",
+  "splash-mobile-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/intro-vertical-en"
 }
