--- a/public/locales/es/creditos.json
+++ b/public/locales/es/creditos.json
@@ -21,9 +21,10 @@
   "18": "Desarrollo",
   "19": "Desarrollo",
   "20": "Desarrollo",
-  "21": "Supervisión, Coordinación y Edición",
+  "21": "Colaboración Especial",
   "22": "Supervisión, Coordinación y Edición",
-  "23": "Agradecimientos Especiales",
+  "23": "Supervisión, Coordinación y Edición",
   "24": "Agradecimientos Especiales",
-  "25": "Agradecimientos Especiales"
+  "25": "Agradecimientos Especiales",
+  "26": "Agradecimientos Especiales"
 }
