--- a/public/locales/es/elphishing.json
+++ b/public/locales/es/elphishing.json
@@ -40,7 +40,7 @@
   "msg6-2": "Países con mayor crecimiento de Phishing en Latam",
   "msg6-3": "Fuente: DIVINDAT",
 
-  "ph-group-title": "Grupo creado por el Phishing",
+  "ph-group-title": "Grupo creado por el Lab EC-Data UPC",
   "ph-group-mem": "Grupo 3 miembros",
   "ph-group-desc": "Conoce acerca de las modalidades de uno de los ciberdelitos más comunes de la región.",
 
@@ -48,7 +48,7 @@
   "inv-2-v": "Vishing ",
   "inv-2-s": "Smishing ",
   "inv-2-p": "Pharming ",
-  "inv-3": "se unió usando el enlace de invitación",
+  "inv-3": "se unió usando el enlace de invitación de Phishing",
 
   "Vishing": "El Vishing",
   "msg7-1": "Derivado de las palabras ",
