--- a/public/locales/es/general.json
+++ b/public/locales/es/general.json
@@ -5,6 +5,6 @@
   "title-2": "peligros online",
   "start": "Comenzar",
   "link-verifier": "Verificador de links",
-  "splash-desktop-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/inicio-horizontal-logo.webm",
-  "splash-mobile-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/inicio-vertical-logo.webm"
+  "splash-desktop-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/inicio-horizontal-logo",
+  "splash-mobile-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/inicio-vertical-logo"
 }
