--- a/public/locales/es/testimonios.json
+++ b/public/locales/es/testimonios.json
@@ -9,36 +9,36 @@
   "inv-4": "Sheyla Choque se unió usando el enlace de invitación",
 
   "aud1": "Jessica Rojas, 43 años (Víctima de Vishing)",
-  "jess-1": "Jessica recibió una llamada que simulaba ser de su instituto educativo. Tras facilitarles un código de validación, los atacantes accedieron a su ",
+  "jess-1": "Recibí una llamada que simulaba ser de mi instituto educativo. Tras facilitarles un código de validación, los atacantes accedieron a mi ",
   "jess-2": "cuenta de WhatsApp ",
   "jess-3": "y la utilizaron para ",
-  "jess-4": "estafar a sus contactos. ",
-  "jess-5": "El delito impactó su vida personal, laboral y su negocio, ya que, como muchos, usaba la aplicación como herramienta clave de comunicación \uD83D\uDCF2.",
+  "jess-4": "estafar a mis contactos. ",
+  "jess-5": "El delito impactó mi vida personal, laboral y mi negocio, ya que, como muchos, usaba la aplicación como herramienta clave de comunicación \uD83D\uDCF2.",
 
   "aud2": "Irina Gonzales García, 40 años (Víctima de Smishing y Phishing)",
-  "irin-1": "Irina fue engañada por un mensaje directo de Instagram que ",
-  "irin-2": "parecía de un amigo.",
-  "irin-3": "Compartió un ",
+  "irin-1": "Fui engañada por un mensaje directo de Instagram que ",
+  "irin-2": "parecía de un amigo. ",
+  "irin-3": "Compartí un ",
   "irin-4": "código de SMS \uD83D\uDCF2",
-  "irin-5": " y los estafadores tomaron sus cuentas, ",
+  "irin-5": " y los estafadores tomaron mis cuentas, ",
   "irin-6": "enviando mensajes fraudulentos \uD83D\uDED1",
-  "irin-7": "a su círculo cercano.",
+  "irin-7": "a mi círculo cercano.",
 
   "aud3": "Ekaterina Zakharova, 44 años (Víctima de Phishing en comercio electrónico)",
-  "ekat-1": "Ekaterina, al realizar compras en Alibaba, una plataforma de ",
+  "ekat-1": "Al realizar compras en Alibaba, una plataforma de ",
   "ekat-2": "comercio en internet \uD83C\uDF10\uD83D\uDED2, ",
-  "ekat-3": "fue estafada por un ",
+  "ekat-3": "fui estafada por un ",
   "ekat-4": "supuesto proveedor ",
   "ekat-5": "que presentó ",
   "ekat-6": "documentos falsos. ",
-  "ekat-7": "Como consecuencia, realizó pagos por un pedido que nunca llegó. Los estafadores crearon perfiles y páginas de seguimiento fraudulentas, simulando ser legítimos dentro de la plataforma confiable.",
+  "ekat-7": "Como consecuencia, realicé pagos por un pedido que nunca llegó. Los estafadores crearon perfiles y páginas de seguimiento fraudulentas, simulando ser legítimos dentro de la plataforma confiable.",
 
   "aud4": "Sheyla Choque Vizcarra, 23 años (Víctima de Phishing y Vishing)",
-  "shey-1": "Sheyla ingresó datos en una ",
+  "shey-1": "Ingresé datos en una ",
   "shey-2": "página falsa del BCP ",
-  "shey-3": "y recibió una llamada del supuesto banco. Proporcionó códigos de seguridad ",
+  "shey-3": "y recibí una llamada del supuesto banco. Proporcioné códigos de seguridad ",
   "shey-4": "(TOKEN) ",
   "shey-5": "y ",
-  "shey-6": "perdió 5,000 soles 💸. ",
-  "shey-7": "Tras denunciar, logró recuperar su dinero."
+  "shey-6": "perdí 5,000 soles 💸. ",
+  "shey-7": "Tras denunciar, logré recuperar mi dinero."
 }
