--- a/public/locales/en/elphishing.json
+++ b/public/locales/en/elphishing.json
@@ -40,7 +40,7 @@
   "msg6-2": "Latin American countries that showed further growth in phishing ",
   "msg6-3": "Source: DIVINDAT",
 
-  "ph-group-title": "Group created by Phishing",
+  "ph-group-title": "Group created by Lab EC-Data UPC",
   "ph-group-mem": "Group 3 members",
 
   "ph-group-desc": "Learn about the modalities of one of the most common cybercrimes in the region.",
@@ -49,7 +49,7 @@
   "inv-2-v": "Vishing ",
   "inv-2-s": "Smishing ",
   "inv-2-p": "Pharming ",
-  "inv-3": "joined using an invitation link",
+  "inv-3": "joined using Phishing's invitation link",
 
   "Vishing": "Vishing",
   "msg7-1": "Derived from the words ",
