--- a/public/locales/en/general.json
+++ b/public/locales/en/general.json
@@ -3,8 +3,12 @@
   "btn-skip-splash": "Start",
   "title": "Stay alert to",
   "title-2": "online dangers",
-  "start": "Start",
+  "start": "Explore special",
   "link-verifier": "Links and files checker",
   "splash-desktop-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/intro-horizontal-en",
-  "splash-mobile-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/intro-vertical-en"
+  "splash-mobile-url": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/intro-vertical-en",
+  "text1": "The special has been created",
+  "text2": "CyberCrime",
+  "text3": "Learn to identify digital scams before it's too late\uD83D\uDEA8",
+  "text4": "⚠\uFE0F Thousands of Peruvians fall victim to digital fraud every year. Learn more about cybersecurity here and use our link checker to detect potentially malicious links."
 }
