--- a/public/locales/es/elphishing.json
+++ b/public/locales/es/elphishing.json
@@ -49,6 +49,8 @@
   "inv-2-s": "Smishing ",
   "inv-2-p": "Pharming ",
   "inv-3": "se unió usando el enlace de invitación de Phishing",
+  "phishing": "Phishing ",
+  "inv-4": "se unió robando el enlace de invitación",
 
   "Vishing": "El Vishing",
   "msg7-1": "Derivado de las palabras ",
