Se quitó espacios y se cambió fuente EN

--- a/public/locales/en/elphishing.json
+++ b/public/locales/en/elphishing.json
@@ -4,7 +4,7 @@
   "msg1-1": "Phishing is a type of ",
   "msg1-2": "cyberattack ",
   "msg1-3": "which use ",
-  "msg1-4": "electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1 , phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
+  "msg1-4": "electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1, phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
   "msg1-5": "to trick people and persuade them to perform certain action such as:",
 
   "msg2-1": "Share ",
@@ -38,7 +38,7 @@
 
   "msg6-1": "Growth of phishing activity in Latin America in 2024",
   "msg6-2": "Latin American countries that showed further growth in phishing ",
-  "msg6-3": "Source: DIVINDAT",
+  "msg6-3": "Source: Kaspersky",
 
   "ph-group-title": "Group created by Lab EC-Data UPC",
   "ph-group-mem": "Group 3 members",
