--- a/public/locales/en/elphishing.json
+++ b/public/locales/en/elphishing.json
@@ -4,7 +4,7 @@
   "msg1-1": "Phishing is a type of ",
   "msg1-2": "cyberattack ",
   "msg1-3": "which use ",
-  "msg1-4": "electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1, phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
+  "msg1-4": "electronic mails \uD83D\uDCE7, text messages \uD83D\uDCF1 phone calls \uD83D\uDCDE or scam websites \uD83C\uDF10 ",
   "msg1-5": "to trick people and persuade them to perform certain action such as:",
 
   "msg2-1": "Share ",
