--- a/public/locales/es/elphishing.json
+++ b/public/locales/es/elphishing.json
@@ -4,7 +4,7 @@
   "msg1-1": "El phishing es un tipo de ",
   "msg1-2": "ciberataque ",
   "msg1-3": "que utiliza ",
-  "msg1-4": "correos electrónicos \uD83D\uDCE7, mensajes de texto \ud83d\udcf1, llamadas telefonicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
+  "msg1-4": "correos electrónicos \uD83D\uDCE7, mensajes de texto \uD83d\uDCF1, llamadas telefonicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
   "msg1-5": "para engañar a las personas y persuadirlas a realizar acciones como:",
 
   "msg2-1": "Compartir ",
