fix: video links fixed

--- a/public/locales/en/prevencion.json
+++ b/public/locales/en/prevencion.json
@@ -36,5 +36,5 @@
     "octavo1": "Link:",
     "octavo2": "Online reports",
 
-    "video_yanira": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/yanira-en.webm"
+    "video_yanira": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/yanira-en"
 }
