--- a/public/locales/es/ciberalerta.json
+++ b/public/locales/es/ciberalerta.json
@@ -17,5 +17,5 @@
   "SegundoChat5": "",
   "SegundoChat6": "que se potenció a raíz de la ",
   "SegundoChat7": "pandemia",
-  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser_v2.webm"
+  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser_v2"
 }
