--- a/public/locales/en/ciberalerta.json
+++ b/public/locales/en/ciberalerta.json
@@ -17,5 +17,5 @@
   "SegundoChat5": "growth",
   "SegundoChat6": "which has been enhanced since the",
   "SegundoChat7": " pandemic",
-  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser-en_shorted.webm"
+  "video_teaser": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/teaser-en_shorted"
 }
