--- a/public/locales/es/prevencion.json
+++ b/public/locales/es/prevencion.json
@@ -32,5 +32,5 @@
     "octavo1": "Enlace:",
     "octavo2": "Denuncias en línea",
     
-    "video_yanira": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/recomendaciones_yanira.webm"
+    "video_yanira": "https://lab-ec-upc.github.io/assets/especial-ciberseguridad/videos/recomendaciones_yanira"
 }
