--- a/public/locales/en/sidebar.json
+++ b/public/locales/en/sidebar.json
@@ -1,6 +1,6 @@
 {
   "inicio": {
-    "title": "CyberAlert Peru",
+    "title": "Welcome...",
     "subtitle": "Welcome...",
     "message": "Welcome to the new special",
     "time": "Thursday"
