--- a/public/locales/es/ciberalerta.json
+++ b/public/locales/es/ciberalerta.json
@@ -2,7 +2,7 @@
   "tituloCiber": "¿Qué es la ciberdelincuencia?",
   "PrimerChat": "La",
   "PrimerChat1": " ciberdelincuencia",
-  "PrimerChat2": "engloba todos los delitos cometidos cometidos por medio de ",
+  "PrimerChat2": "engloba todos los delitos cometidos por medio de ",
   "PrimerChat3": "internet",
   "PrimerChat4": "y las",
   "PrimerChat5": "tecnologías digitales",
