--- a/public/locales/es/elphishing.json
+++ b/public/locales/es/elphishing.json
@@ -4,25 +4,25 @@
   "msg1-1": "El phishing es un tipo de ",
   "msg1-2": "ciberataque ",
   "msg1-3": "que utiliza ",
-  "msg1-4": "correos electrónicos \uD83D\uDCE7, mensajes de texto \uD83D\uDCF1, llamadas telefonicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
+  "msg1-4": "correos electrónicos \uD83D\uDCE7, mensajes de texto \uD83D\uDCF1, llamadas telefónicas \uD83D\uDCDE o sitios web fraudulentos \uD83C\uDF10 ",
   "msg1-5": "para engañar a las personas y persuadirlas a realizar acciones como:",
 
   "msg2-1": "Compartir ",
   "msg2-2": "datos confidenciales",
   "msg2-3": "Descargar ",
-  "msg2-4": "malwares ",
-  "msg2-5": "(cualquier tipo de código o aplicacion dañina que puede afectar a un dispositivo)",
+  "msg2-4": "malware ",
+  "msg2-5": "(cualquier tipo de código o aplicación dañina que puede afectar a un dispositivo)",
   "msg2-6": "Exponer su ",
-  "msg2-7": "informacion personal ",
+  "msg2-7": "información personal ",
   "msg2-8": "a la ciberdelincuencia ",
 
   "msg3-1": "Entre julio de 2023 y julio de 2024, en toda América Latina, se registraron más de ",
-  "msg3-2": "697 millones de bloqueos de phishing \uD83D\uDEE1\uFE0F\uD83D\uDCE7",
+  "msg3-2": "697 millones de bloqueos de phishing, \uD83D\uDEE1\uFE0F\uD83D\uDCE7",
   "msg3-3": "según el Panorama de Amenazas de Kaspersky, empresa de ciberseguridad  dedicada a ",
   "msg3-4": "ofrecer soluciones y servicios de protección para usuarios y compañías ",
   "msg3-5": "en todo el mundo.",
 
-  "msg4-1": "En ese mismo periodo, en el Perú \uD83C\uDDF5\uD83C\uDDEA se registraron cerca de ",
+  "msg4-1": "En ese mismo periodo, en el Perú se registraron cerca de ",
   "msg4-2": "91 millones de ataques de phishing, ",
   "msg4-3": "casi",
   "msg4-4": "cuatro veces ",
@@ -78,6 +78,7 @@
   "msg9-7": "a las personas y obtener su ",
   "msg9-8": "información personal o financiera.",
 
+  "Pharming": "El Pharming",
   "msg10-1": "Los ",
   "msg10-2": "ciberdelincuentes ",
   "msg10-3": "que realizan smishing se hacen pasar por ",
