--- a/public/locales/es/sidebar.json
+++ b/public/locales/es/sidebar.json
@@ -1,6 +1,6 @@
 {
   "inicio": {
-    "title": "CiberAlerta Perú",
+    "title": "Bienvenidos...",
     "subtitle": "Bienvenidos...",
     "message": "Bienvenidos al nuevo especial",
     "time": "Jueves"
