--- a/public/locales/en/creditos.json
+++ b/public/locales/en/creditos.json
@@ -1,5 +1,6 @@
 {
   "grupo": "Group 26 members",
+  "miembros": "26 members",
   "descripcion": "This report was prepared by the students of the Innovative Journalism Lab of ECData and the Universidad Peruana de Ciencias Aplicadas, under the supervision and guidance of journalists from El Comercio.",
   "1": "Project Coordinator",
   "2": "Development Coordinator",
