--- a/public/locales/es/creditos.json
+++ b/public/locales/es/creditos.json
@@ -1,5 +1,6 @@
 {
   "grupo": "Grupo 26 miembros",
+  "miembros": "26 miembros",
   "descripcion": "Este informe fue elaborado por los alumnos del Laboratorio de Periodismo Innovador de ECData y la Universidad Peruana de Ciencias Aplicadas, bajo la supervisión y guía de periodistas de El Comercio.",
   "1": "Coordinador de Proyectos",
   "2": "Coordinador de Desarrollo",
